fixed table size on mobile

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -153,8 +153,7 @@ table {
   table-layout: auto;
   margin-top: 1rem;
   padding: 1rem;
-  width: 90rem;
-  max-width: 80vw;
+  width: 80vw;
   background-color: rgba(255, 255, 255, 0.3);
   border-radius: 10px;
   box-shadow: rgb(0,0,0,0.4) 0px 5px 15px;
